--- a/manifest.json
+++ b/manifest.json
@@ -1,5 +1,5 @@
 {
-    "name" : "安康兴华名城",
+    "name" : "单页面",
     "appid" : "__UNI__7890570",
     "description" : "",
     "versionName" : "1.0.0",
